Left4DeadHelper.Bindings.DevILNative/Bindings/Il.cs

            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadPal([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilModAlpha(double alphaValue);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilOriginFunc(OriginDefinition mode);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilOverlayImage(uint source, int xCoord, int yCoord, int zCoord);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilPopAttrib();
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilPushAttrib(uint bits);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilRegisterFormat(DataFormat format);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRegisterLoad(
                [MarshalAs(UnmanagedType.LPWStr)] string ext,
                [MarshalAs(UnmanagedType.FunctionPtr)] IL_LOADPROC Load);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRegisterMipNum(uint num);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRegisterNumFaces(uint num);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRegisterNumImages(uint num);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilRegisterOrigin(OriginDefinition origin);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilRegisterPal(IntPtr pal, uint size, PaletteType type);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRegisterSave(
                [MarshalAs(UnmanagedType.LPWStr)] string ext,
                [MarshalAs(UnmanagedType.FunctionPtr)] IL_SAVEPROC saveCb);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilRegisterType(DataType type);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRemoveLoad([MarshalAs(UnmanagedType.LPWStr)] string ext);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilRemoveSave([MarshalAs(UnmanagedType.LPWStr)] string ext);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilResetMemory(); // Deprecated
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilResetRead();
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilResetWrite();
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSave(ImageType type, [MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilSaveF(ImageType type, IntPtr fileHandle);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSaveImage([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern uint ilSaveL(uint type, IntPtr lump, uint size);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSavePal([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSetAlpha(double alphaValue);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSetData(IntPtr data);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSetDuration(uint duration);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetInteger(uint mode, int param);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetMemory(
                [MarshalAs(UnmanagedType.FunctionPtr)] mAlloc mAllocCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] mFree mFreeCb);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetPixels(
                int xOff, int yOff, int zOff,
                uint width, uint height, uint depth,
                 DataFormat format, DataType type, IntPtr data);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetRead(
                [MarshalAs(UnmanagedType.FunctionPtr)] fOpenRProc fOpenRProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fCloseRProc fCloseRProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fEofProc fEofProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fGetcProc fGetcProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fReadProc fReadProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fSeekRProc fSeekRProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fTellRProc fTellRProcCb);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetString(FileFormatSpecificValue mode, [MarshalAs(UnmanagedType.LPStr)] string str);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilSetWrite(
                [MarshalAs(UnmanagedType.FunctionPtr)] fOpenWProc fOpenWProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fCloseWProc fCloseWProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fPutcProc fPutcProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fSeekWProc fSeekWProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fTellWProc fTellWProcCb,
                [MarshalAs(UnmanagedType.FunctionPtr)] fWriteProc fWriteProcCb);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern void ilShutDown();
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSurfaceToDxtcData(DxtcDefinition format);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilTexImage(
                uint width, uint height, uint depth,
                byte numChannels, DataFormat dataFormat, DataType dataType,
                IntPtr dataPtr);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilTexImageDxtc(int w, int h, int d, DxtcDefinition dxtcFormat, byte* data);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            public unsafe static extern ImageType ilTypeFromExt([MarshalAs(UnmanagedType.LPWStr)] string fileName);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilTypeFunc(DataFormat mode);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadData(
                [MarshalAs(UnmanagedType.LPWStr)] string fileName,
                uint width, uint height, uint depth, byte bpp);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadDataF(IntPtr fileHandle,
                uint width, uint height, uint depth, byte bpp);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilLoadDataL(IntPtr lump,
                uint size, uint width, uint height, uint depth, byte bpp);
            [DllImport("DevIL.x64.dll", CallingConvention = CallingConvention.StdCall)]
            [return: MarshalAs(UnmanagedType.U1)]
            public unsafe static extern bool ilSaveData([MarshalAs(UnmanagedType.LPWStr)] string fileName);
        }

        #endregion
    }
}
